[tool.poetry]
name = "hinterland-hack-job-platform"
version = "0.1.0"
description = ""
authors = ["Tom Stein <dev@tomstein.me>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.12.2"
numpy = "^1.23.3"
pandas = "^1.4.4"
lxml = "^4.9.1"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
nltk = "^3.7"
matplotlib = "^3.6.0"
skillNer = "^1.0.3"
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.4.0/en_core_web_lg-3.4.0.tar.gz#egg=en_core_web_lg"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
